--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,9 +26,9 @@
     <string name="error_room_name_too_short">The room name must be at least %d characters long.</string>
     <string name="you">You</string>
     <string name="error_room_too_large">The maximum room size is %d.</string>
-    <string name="drawing_player_is_choosing_word">%s is choosing a word...</string>
-    <string name="waiting_for_players">Waiting for players...</string>
-    <string name="waiting_for_start">Waiting for for more players to join...</string>
+    <string name="drawing_player_is_choosing_word">%s is picking a word…</string>
+    <string name="waiting_for_players">Waiting for more players…</string>
+    <string name="waiting_for_start">Waiting for more players to join…</string>
     <string name="check_internet_connection">Couldn\'t reach server. Check your internet connection.</string>
     <string name="error_http">Something went wrong. Please try again later.</string>
     <string name="error_internet_turned_off">This app requires an active internet connection to be used.</string>
@@ -43,11 +43,11 @@
     <string name="speech_to_text_info">Simply speak into your microphone to quickly guess words. To disable this function, press on the microphone icon again.</string>
     <string name="speech_not_available">Speech recognition is not available for your device.</string>
     <string name="guessasketch">Guess-a-Sketch</string>
-    <string name="choose_your_word">You are next, choose your word!</string>
+    <string name="pick_your_word">You are next, pick your word!</string>
     <string name="create_a_new_room">Create a New Room</string>
-    <string name="search_for_rooms">Search for rooms...</string>
+    <string name="search_for_rooms">Search for rooms…</string>
     <string name="no_rooms_found">No Rooms Found</string>
-    <string name="listening">Listening...</string>
+    <string name="listening">Listening…</string>
     <string name="error_unknown">Unknown Error</string>
     <string name="create">Create</string>
     <string name="connection_failed">Connection to server failed.</string>
