Add speech to text, change drawing view to be more intuitive

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,15 +41,15 @@
     <string name="dialog_yes">yes</string>
     <string name="dialog_leave_no">no</string>
     <string name="room_size">Room Size</string>
-    <string name="rationale_record_audio">To enable speech to text, you need to permit recording audio.</string>
+    <string name="rationale_record_audio">To enable \"Speech to Text\", you need to permit recording audio.</string>
     <string name="speech_to_text_info">Simply speak into your microphone to quickly guess words. To disable this function, press on the microphone icon again.</string>
-    <string name="speech_not_available">Speech recognition is not available for your device.</string>
+    <string name="speech_recognizer_not_available">Speech recognition is not available for your device.</string>
     <string name="guessasketch">Guess-a-Sketch</string>
     <string name="pick_your_word">You are next, pick your word!</string>
     <string name="create_a_new_room">Create a New Room</string>
     <string name="search_for_rooms">Search for rooms…</string>
     <string name="no_rooms_found">No Rooms Found</string>
-    <string name="listening">Listening…</string>
+    <string name="speech_recognizer_listening">Listening…</string>
     <string name="error_unknown">Unknown Error</string>
     <string name="create">Create</string>
     <string name="connection_failed">Connection to server failed.</string>
